# CMake_project_template

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rotatingbarytri.cpp
libs/: CMakeLists.txt  my_math.cpp  my_math.h
my_libs/: CMakeLists.txt  my_math.cpp  my_math.h
src/: main.cpp
